# event-notifier

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  NOTIFICATION_SERVICE_ARCHITECTURE.md  alembic.ini  entrypoint.sh  pyproject.toml
.github/workflows/: publish-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_command_path_redesign.py  003_notification_bindings.py  004_binding_recipient_role.py
docs/: API_CONTRACTS.md  AUDIT.md  DEPENDENCIES.md  SERVICE_OVERVIEW.md
docs/superpowers/plans/: 2026-04-25-alembic-orm-event-schemas.md
event_notifier/: admin_auth.py  config.py  event_types.py  ioc.py  logger.py  main.py  metrics.py  routes_admin.py
event_notifier/adapters/: bindings_provider.py  consumer.py  outbox_sender.py  result_publisher.py  sql.py  unisender_templates.py
event_notifier/application/use_cases/: process_domain_event.py  process_notification_command.py
event_notifier/db/: models.py  repository.py  schema.py
event_notifier/domain/: localization.py
event_notifier/domain/models/: binding.py  notification.py
event_notifier/domain/services/: routing.py
event_notifier/infrastructure/: users_client.py
event_notifier/infrastructure/channels/: email.py  push.py  telegram.py
event_notifier/interfaces/: channels.py  repository.py  result_publisher.py  sql.py  users_client.py
event_notifier/templates/en/telegram/: BOOKING_CANCELLED.j2  BOOKING_CREATED.j2  BOOKING_REASSIGNED.j2  BOOKING_REJECTED.j2  BOOKING_REJECTED_BLACKLISTED.j2  BOOKING_REMINDER.j2  BOOKING_RESCHEDULED.j2
event_notifier/templates/ru/telegram/: BOOKING_CANCELLED.j2  BOOKING_REASSIGNED.j2  BOOKING_REJECTED.j2  BOOKING_REJECTED_BLACKLISTED.j2  BOOKING_REMINDER.j2  BOOKING_RESCHEDULED.j2
event_notifier/templates/telegram/: BOOKING_CANCELLED.j2  BOOKING_CREATED.j2  BOOKING_REASSIGNED.j2  BOOKING_REMINDER.j2  BOOKING_RESCHEDULED.j2
tests/: conftest.py  test_config.py  test_health.py  test_ioc.py  test_metrics.py  test_routes_admin.py
tests/adapters/: test_bindings_provider.py  test_consumer.py  test_result_publisher.py
tests/application/: test_process_domain_event.py  test_process_notification_command.py
tests/db/: test_bindings_repository.py  test_repository.py
tests/domain/: test_localization.py  test_notification_models.py  test_routing_service.py
tests/infrastructure/: test_channels_bindings.py  test_email_channel.py  test_outbox_sender.py  test_push_channel.py  test_telegram_channel.py  test_users_client.py
