[project]
name = "event-notifier"
version = "0.1.0"
description = "Notification dispatch service"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "cloudevents>=1.12.0",
    "dishka>=1.8.0",
    "event-schemas",
    "fastapi>=0.135.1",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=25.5.0",
    "uvicorn>=0.41.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-instrumentation-httpx>=0.51b0",
    "opentelemetry-instrumentation-asyncpg>=0.51b0",
]

[tool.uv.sources]
# Self-contained build: event-schemas is pulled from its own repo by tag.
# For local schema work, temporarily swap to { path = "../event-schemas", editable = true }.
event-schemas = { git = "https://github.com/Lelikov/event-schemas.git", tag = "v0.3.0" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 120
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
